# discord-rust-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
src/rustbot/: __init__.py  __main__.py  app.py  config.py  crypto.py  events.py  genkey.py  logging_setup.py
src/rustbot/discord_layer/: __init__.py  bot.py  commands.py  embeds.py
src/rustbot/domain/: __init__.py  alerts.py  state.py
src/rustbot/event_router/: __init__.py  router.py
src/rustbot/persistence/: __init__.py  base.py  schema.sql  sqlite_store.py
src/rustbot/rustplus_client/: __init__.py  client.py
tests/: test_alerts.py  test_event_router.py  test_persistence.py  test_state_diffing.py
