[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-rust-bot"
version = "0.1.0"
description = "Self-hosted Discord bot for the game Rust (Rust+ alerts and status)."
requires-python = ">=3.11"
dependencies = [
    "discord.py==2.7.1",
    "rustplus==6.0.9",
    "python-dotenv==1.2.2",
    "cryptography==49.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Make `src/` importable in tests without an editable install.
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
